--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="nav-container">
+        <h3 class="logo">
+          RAI<span
+            style="
+              background: linear-gradient(
+                135deg,
+                rgb(222, 138, 11),
+                rgb(180, 90, 0)
+              );
+            "
+            >YAN</span
+          >
+        </h3>
+
+        <ul class="nav-link">
+          <li><a class="home" href="">Home</a></li>
+          <li><a class="home" href="">About</a></li>
+          <li><a class="home" href="">Contact</a></li>
+        </ul>
+      </nav>
+      <section class="banner">
+        <div class="banner-container">
+          <div class="banner-text-btn">
+            <div class="banner-text">
+              <h1 class="banner-title">
+                Hi There, I'm Raiyan
+                <span style="color: rgb(222, 138, 11)">Sohel</span>
+              </h1>
+              <h2 class="banner-sub-title">Frontend developer</h2>
+            </div>
+            <div class="banner-btn">
+              <button class="btn">Hire Me</button>
+            </div>
+          </div>
+          <div class="banner-image">
+            <img class="image" src="images/me.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </header>
     <main></main>
     <footer></footer>
   </body>
