--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>My Portfolio</title>
+
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
+  <body class="open-sans-normal">
     <header>
       <nav class="nav-container">
         <h3 class="logo">
@@ -48,7 +55,34 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <div class="about-text">
+          <div class="about-title-description merriweather-normal">
+            <h1 class="title">About Me</h1>
+            <h5 class="description">
+              I, m a designer & developer with a passion for web design. I enjoy
+              developing simple, clean and slick websites that provide real
+              value to the end user. Thousands of clients have procured
+              exceptional resulfs while working with me. Delivering work within
+              time and budget which meets clients requirements in our mata.
+            </h5>
+          </div>
+          <div class="designation-text-title merriweather-normal">
+            <h4>Name:</h4>
+            <h4>Email:</h4>
+            <h4>Date of birth:</h4>
+            <h4>From:</h4>
+          </div>
+          <div class="designation-text merriweather-normal">
+            <h4>Raiyan Sohel</h4>
+            <h4>afnan19262@gmail.com</h4>
+            <h4>31 March 2000</h4>
+            <h4>Dhaka, Bangladesh</h4>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
